--- a/infrastructure/package.json
+++ b/infrastructure/package.json
@@ -11,27 +11,29 @@
     "cdk": "cdk"
   },
   "devDependencies": {
+    "@aws-cdk/aws-cognito-identitypool-alpha": "^2.35.0-alpha.0",
+    "@aws-cdk/aws-lambda-python-alpha": "^2.35.0-alpha.0",
     "@types/adm-zip": "^0.5.0",
-		"@types/aws-lambda": "^8.10.97",
+    "@types/aws-lambda": "^8.10.97",
     "@types/cookie": "^0.5.1",
     "@types/fs-extra": "^9.0.13",
     "@types/jest": "^27.5.0",
     "@types/node": "^17.0.14",
-    "aws-cdk": "^2.33.0",
+    "aws-cdk": "^2.35.0",
     "aws-sdk": "^2.1140.0",
     "html-loader": "^3.1.0",
     "jest": "^27.5.1",
-		"terser-webpack-plugin": "^5.3.1",
+    "terser-webpack-plugin": "^5.3.1",
     "ts-jest": "^27.1.4",
-		"ts-loader": "^9.3.0",
+    "ts-loader": "^9.3.0",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.4",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.2"
-	},
+  },
   "dependencies": {
     "adm-zip": "^0.5.9",
-    "aws-cdk-lib": "2.33.0",
+    "aws-cdk-lib": "^2.35.0",
     "aws-jwt-verify": "^3.0.0",
     "constructs": "^10.0.0",
     "cookie": "^0.5.0",
